<project>
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>
    <name>VTerm [VTx]</name>

    <groupId>nl.piter.vterm</groupId>
    <artifactId>vterm</artifactId>
    <version>2.2.1-SNAPSHOT</version>

    <modules>
        <module>vterm-emulator</module>
        <module>vterm-main</module>
        <module>vterm-sftp</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- utils -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>1.18.26</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>1.7.36</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-reload4j</artifactId>
                <version>1.7.36</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-reload4j</artifactId>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.0</version>
                    <configuration>
                        <release>11</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.2.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>


    <repositories>
        <repository>
            <id>jcenter-id</id>
            <name>JCenter</name>
            <url>https://jcenter.bintray.com/</url>
        </repository>
    </repositories>


    <distributionManagement>
        <repository>
            <id>${dist.artifactory.releases.id}</id>
            <name>Project Releases</name>
            <url>${dist.artifactory.releases.url}</url>
        </repository>
        <snapshotRepository>
            <id>${dist.artifactory.snapshots.id}</id>
            <name>Project Snapshots</name>
            <url>${dist.artifactory.snapshots.url}</url>
        </snapshotRepository>
    </distributionManagement>

</project>

